[gd_scene load_steps=2 format=3 uid="uid://coh88h18tyywe"]

[ext_resource type="Script" path="res://Scripts/Stress.gd" id="1_ywq83"]

[node name="Stress" type="Panel"]
offset_top = 454.0
offset_right = 457.0
offset_bottom = 645.0
script = ExtResource("1_ywq83")

[node name="Label Phisical Stress" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 250.0
offset_bottom = 30.0
text = "Physical Stress (Vitality)"

[node name="PhisicalContainer" type="PanelContainer" parent="Label Phisical Stress"]
custom_minimum_size = Vector2(450, 45)
layout_mode = 0
offset_left = -1.0
offset_top = 28.0
offset_right = 449.0
offset_bottom = 73.0

[node name="HealthTotal" type="HBoxContainer" parent="Label Phisical Stress/PhisicalContainer"]
layout_mode = 2
alignment = 1

[node name="Health Bar" type="HBoxContainer" parent="Label Phisical Stress/PhisicalContainer/HealthTotal"]
layout_mode = 2

[node name="Extra Health" type="HBoxContainer" parent="Label Phisical Stress/PhisicalContainer/HealthTotal"]
layout_mode = 2

[node name="Label Mental Stress" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 84.0
offset_right = 249.0
offset_bottom = 110.0
text = "Mental Stress (Will)"

[node name="MentalContainer" type="PanelContainer" parent="Label Mental Stress"]
custom_minimum_size = Vector2(450, 45)
layout_mode = 0
offset_top = 28.0
offset_right = 444.0
offset_bottom = 73.0

[node name="MentalTotal" type="HBoxContainer" parent="Label Mental Stress/MentalContainer"]
layout_mode = 2
alignment = 1

[node name="Mental Bar" type="HBoxContainer" parent="Label Mental Stress/MentalContainer/MentalTotal"]
layout_mode = 2

[node name="Extra Mental" type="HBoxContainer" parent="Label Mental Stress/MentalContainer/MentalTotal"]
layout_mode = 2
